--- a/.github/workflows/docker-testing.yml
+++ b/.github/workflows/docker-testing.yml
@@ -1,4 +1,4 @@
-name: Docker Testing CI/CD
+name: Docker-Testing CI/CD
 
 on:
   workflow_dispatch:
@@ -45,10 +45,10 @@ jobs:
       - name: Tags Docker image
         run: |
           docker tag spotter-app ${{ secrets.DOCKER_USER }}/spotter-app:latest
-        #   docker tag spotter-app ${{ secrets.DOCKER_USER }}/spotter-app:${{ github.sha }}
+          docker tag spotter-app ${{ secrets.DOCKER_USER }}/spotter-app:${{ github.sha }}
 
       - name: Push Docker image to Docker-Hub
         run: |
           docker push ${{ secrets.DOCKER_USER }}/spotter-app:latest
-        #   docker push ${{ secrets.DOCKER_USER }}/spotter-app:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USER }}/spotter-app:${{ github.sha }}
           
