--- a/configs/nginx.conf
+++ b/configs/nginx.conf
@@ -1,6 +1,9 @@
 server {
-    listen 0.0.0.0:9323; # Escucha en todas las interfaces de red dentro del contenedor
+    listen 70;
     server_name localhost;
 
-    # Ruta al directorio donde se encuentran los archivos de los reportes generados por Playwright
-    root ../../Testing/playwright-report
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+    }
+}
