--- a/.github/workflows/front-docker-push.yml
+++ b/.github/workflows/front-docker-push.yml
@@ -1,34 +1,12 @@
-name: Docker-Testing CI/CD
+name: Front Docker-Push CI/CD
 
 on:
   workflow_dispatch:
 
 jobs:
-  testing-app:
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:focal
 
-    steps:
-      - name: Checkout Testing repository
-        uses: actions/checkout@v2
-        with:
-          repository: SpotterGym/Testing
-          ref: spotter-app_1.0 # cambiar a rama donde se encutran test del release correspondiente
-          token: ${{ secrets.DOCKER_TOKEN }}
-  
-      - name: Install dependencies
-        run: npm ci
-  
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-  
-      - name: Run Playwright tests
-        run: npx playwright test
-
-  push-dockerfile:
+  Docker-Push:
     runs-on: ubuntu-latest
-    needs: testing-app
 
     steps:
       - uses: actions/checkout@v1
@@ -47,8 +25,7 @@ jobs:
           docker tag spotter-app ${{ secrets.DOCKER_USER }}/spotter-app:latest
           docker tag spotter-app ${{ secrets.DOCKER_USER }}/spotter-app:${{ github.sha }}
 
-      - name: Push Docker image to Docker-Hub
+      - name: Push Docker image to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_USER }}/spotter-app:latest
           docker push ${{ secrets.DOCKER_USER }}/spotter-app:${{ github.sha }}
-          
